sumo/tests/dfrouter/errors/network/junction/root__junction#id__ungiven2/errors.dfrouter
Error: A junction without an id occured within 'net.net.xml'.
Quitting (on error).
